# proxitarian

./: pyproject.toml  tasks.py
proxies/main/apiproxy/: proxy.xml
proxies/main/apiproxy/policies/: AssignMessage.AddCors.xml  AssignMessage.AddPayloadToPing.xml  AssignMessage.SetStatusResponse.xml  FlowCallout.ApplyRateLimiting.xml  ServiceCallout.CallHealthcheckEndpoint.xml
proxies/main/apiproxy/proxies/: default.xml
proxies/main/apiproxy/resources/jsc/: HealthCheck.SetResponse.js
proxies/main/apiproxy/targets/: target.xml
terraform/: main.tf  variables.tf
